# wetzel-iiot-host

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  component.mk
main/include/: async_server.h  configuration.h  server_html_utils.h
main/include/async_server/: README.md  async_server.h
main/include/comum/: debug.h  macros.h  nvs_wetzel_handler.h
main/include/local_storage/: README.md  local_storage.h
main/include/perifericos/: TimeLib.h  real_time_clock.h  sd_card_handler.h
main/include/real_time_clock/: real_time_clock.h
main/include/relatorio/: report_direct_msg_handlers.h  report_handler.h
main/include/wifi/: wifi_direct_msg_handlers.h  wifi_event_listener.h  wifi_wetzel_constants.h  wifi_wetzel_esp32.h  wifi_wetzel_utils.h
main/lib/API_ModuloRelatorio/: API_ModuloRelatorio.cpp  API_ModuloRelatorio.h  README.md
main/lib/API_ModuloRelatorio/local_storage/: README.md  local_storage.cpp  local_storage.h
main/lib/Adafruit_BusIO_lib/: CMakeLists.txt
main/lib/Memory/: Memory.cpp  Memory.h  README.md
main/lib/RTC_lib/: CMakeLists.txt
main/src/: async_server.cpp  esp-interface.cpp  server_html_utils.cpp
main/src/async_server/: async_server.cpp
main/src/comum/: nvs_wetzel_handler.cpp
main/src/local_storage/: local_storage.cpp
main/src/perifericos/: real_time_clock.cpp  sd_card_handler.cpp
main/src/real_time_clock/: real_time_clock.cpp
main/src/relatorio/: report_direct_msg_handlers.cpp  report_handler.cpp
main/src/wifi/: wifi_direct_msg_handlers.cpp  wifi_event_listener.cpp  wifi_wetzel_esp32.cpp  wifi_wetzel_utils.cpp
